--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"Database": "Host=inventoryservice.database;Port=5432;Database=inventorydb;Username=postgres;Password:postgres;Include Error Detail=true"
+		"Database": "Host=inventoryservice.database;Port=5432;Database=inventorydb;Username=postgres;Password=postgres;Include Error Detail=true"
 	},
 	"AllowedHosts": "*",
 	"Serilog": {
