Added all the new entities

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -28,5 +28,12 @@
 			"WithMachineName",
 			"WithThreadId"
 		]
+	},
+	"DatabaseOptions": {
+		"ConnectionString":  "",
+		"MaxRetryCount": 3,
+		"CommandTimeout": 30,
+		"EnabledDetailedLogging": true,
+		"EnableSensitiveDataLogging": true
 	}
 }
