Added Azure App Configuration

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -19,4 +19,13 @@
 		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Products\Commands\CreateProduct\" />
+	  <Folder Include="Products\Commands\DeleteProduct\" />
+	  <Folder Include="Products\Commands\UpdateSupplier\" />
+	  <Folder Include="Products\Commands\UpdateProduct\" />
+	  <Folder Include="Products\Queries\GetAllProducts\" />
+	  <Folder Include="Products\Queries\GetProductById\" />
+	</ItemGroup>
+
 </Project>
