--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -27,4 +27,9 @@
 	  <Folder Include="Products\Queries\GetProductById\" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>InventoryService.Application.UnitTests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
