--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -14,18 +14,13 @@
 				"Serilog.Sinks.Console"
 			],
 			"MinimumLevel": {
-				"Default": "Debug",
-				"Override": {
-					"Microsoft": "Information",
-					"System": "Information"
-				}
+				"Default": "Information"
 			},
 			"WriteTo": [
 				{
 					"Name": "Console",
 					"Args": {
-						"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-						"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+						"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
 					}
 				}
 			],
